--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -12,6 +12,7 @@ header h1
     font-size: 2.5em; 
     font-weight: normal;
     margin: 0 0 0 10px;
+    color : red;
 }
 
 header nav
@@ -22,7 +23,7 @@ header nav
 header nav a 
 {
   display: block;
-  color : white;
+  color : red;
   text-align: center;
   padding: 14px 16px;
 }
