--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -12,7 +12,6 @@ header h1
     font-size: 2.5em; 
     font-weight: normal;
     margin: 0 0 0 10px;
-    color : red;
 }
 
 header nav
@@ -23,7 +22,7 @@ header nav
 header nav a 
 {
   display: block;
-  color : red;
+  color : white;
   text-align: center;
   padding: 14px 16px;
 }
