--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -2,31 +2,65 @@
 
 header 
 {
+	background-image: url("../images/top_commercial.png");
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	
+	border-style: solid;
+  	border-width: 1px;
+}
+
+header #main_header
+{
 	display: flex;
-	justify-content: space-between;
-	align-items: flex-end;
+	justify-content: space-between;	
+	align-items : center;
 }
 
 header h1
 {
     font-size: 2.5em; 
     font-weight: normal;
-    margin: 0 0 0 10px;
+   
+    border-style: solid;
+	border-width: 1px;	
+	flex : 1;
 }
+
 
 header nav
 { 
-  background-color: rgba(0,0,100,0.8);
+	display:flex;
+	 justify-content: space-around;
+  background-color: rgba(0,0,100,0.6);
+  border-style: solid;
+	border-width: 1px;
 }
 
 header nav a 
-{
-  display: block;
-  color : white;
-  text-align: center;
-  padding: 14px 16px;
+{  
+	border-style: solid;
+	border-width: 1px;
+  	color : white;
+  	text-align: center;
+  	padding: 14px 16px;
+  	flex : 1;
 }
 
+header nav h2
+{
+    font-weight: normal;   
+    border-style: solid;
+	border-width: 1px;
+	color : white;
+	flex : 1;
+}
+
+
+body 
+{
+	background-color: #c6eaae;
+}
 
 aside
 {
@@ -42,7 +76,7 @@ aside
 
 #logo
 {
-    display: flex;
+	display: flex;
     flex-direction: row;
     align-items: center;
 }
@@ -51,13 +85,6 @@ aside
 {
     width: 100px;
     height: 100px;
-}
-
-header
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
 }
 
 nav ul
