More css (Ca commence à devenir moins horrible)

--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -18,8 +18,6 @@ h1 /*Style général pour les titres h1*/
 	font-size: 2.5em; 
     font-weight: normal;
    	text-align: center;
-   	border-style: solid;
-	border-width: 1px;	
 }
 
 h2
@@ -35,19 +33,24 @@ header
 	//background-repeat: no-repeat;
 	//background-position: top left;
 	
+	border-radius: 5px;
 	border-style: solid;
   	border-width: 1px;
+  	  box-shadow: 0px 2px 5px #1c1a19;
 }
 
 #logo /* Contient les items img, h1, et nav*/
 {
 	border-style: solid;
 	border-width: 1px;
+	border-radius: 5px;
 	display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    background-color: rgba(0,0,100,0.5);
 }
 
-#logo img
+#logo img /*Logo AWE*/
 {
 	border-style: solid;
 	border-width: 1px;
@@ -58,22 +61,19 @@ header
 #logo h1 /*Modification du flex du titre*/
 {
 	flex : 3;	
-}
+	color: white;
+	}
 
 #logo nav
-{ 
-	background-color: rgba(0,0,100,0.6);
-  	border-style: solid;
-	border-width: 1px;	
+{ 	
 	flex : 1;
 }
-
 
 header nav a  /*Couleur du texte de nav*/
 {  
   	color : white;   
 }
-header nav li
+header nav li /*Défini les boutons*/
 {
 	width : 90px;
 	padding: 12px 0px;
@@ -82,39 +82,38 @@ header nav li
 	text-align: center;
 	color : white;   
 }
-nav ul
+nav ul /*Gestion des déplacements des boutons*/
 
 {
     list-style-type: none;
     padding: 5px 5px;	
     display: flex;    
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
-
-
 aside
 {
-    flex: 1.2;
+
     position: relative;
-    background-color: #706b64;
+    background-color: rgba(0,0,100,0.5);
     box-shadow: 0px 2px 5px #1c1a19;
     border-radius: 5px;
     padding: 10px;
     color: white;
     font-size: 0.9em;
+    margin: 15px 0px;
+    border-color: black;
+    border-style: solid;
+	border-width: 1px;
 }
-
-
-
-
-
 
 
 section
 {
     display: flex;
     margin-bottom: 20px;
+     justify-content: space-between;
 }
 
 
@@ -127,4 +126,16 @@ article
 {
     margin-right: 20px;
     flex: 3;
+     border-style: solid;
+	border-width: 1px;
 }
+
+@media (max-width: 660px) 
+{
+    header h1
+    {
+        display: none;
+    }
+}
+
+
