correction commentaire header suppression de //

--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -29,9 +29,9 @@ h2
 
 header
 {
-	//background-image: url("../images/top_commercial2.png");
-	//background-repeat: no-repeat;
-	//background-position: top left;
+	/*background-image: url("../images/top_commercial2.png");
+	background-repeat: no-repeat;
+	background-position: top left;*/
 	
 	border-radius: 5px;
 	border-style: solid;
