--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -153,7 +153,7 @@ article
     justify-content: space-around;
     display: inline-block;
   	width: 140px;
-  	text-align: right;
+  	text-align: left;
 }
 
 .TextWrap
