--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -108,6 +108,20 @@ aside
 	border-width: 1px;
 }
 
+.supprimer
+{
+    float: left;
+    background-color: rgba(0,0,100,0.5);
+    box-shadow: 0px 2px 5px #1c1a19;
+    border-radius: 5px;
+    padding: 10px;
+    color: white;
+    font-size: 0.9em;
+    margin: 15px 0px;
+    border-color: black;
+    border-style: solid;
+	border-width: 1px;
+}
 
 section
 { 
