--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -94,7 +94,6 @@ nav ul /*Gestion des déplacements des boutons*/
 
 aside
 {
-
     position: relative;
     background-color: rgba(0,0,100,0.5);
     box-shadow: 0px 2px 5px #1c1a19;
@@ -123,6 +122,12 @@ aside
 	border-width: 1px;
 }
 
+label {
+  display: inline-block;
+  width: 140px;
+  text-align: right;
+}
+  
 section
 { 
     margin-bottom: 20px;
