--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -109,7 +109,7 @@ aside
 
 .supprimer
 {
-    float: left;
+    float: right;
     background-color: rgba(0,0,100,0.5);
     box-shadow: 0px 2px 5px #1c1a19;
     border-radius: 5px;
