--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -4,7 +4,9 @@
 
 body  /* Couleur de fond pour l'ensemble */
 {
-	background-color: #c6eaae;
+/*	background-color: #c6eaae; Couleur Francois :D */
+	background-color: #c3e5f5;
+	
 }
 
 #bloc_page /*Marge pour l'ensemble de la page*/
