--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -216,3 +216,17 @@ article img
   cursor: pointer;
   border-radius: 12px;
 }
+
+.button {
+  background-color: #0080ff; /* Green */
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px;
+}
