--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -202,9 +202,9 @@ article img
         display: none;
     }
 }
-
-.button {       /* ---------------test michael*/
-  background-color: #0080ff; /* Green */
+/*
+.button {       /* ---------------test michael
+  background-color: #0080ff;
   border: none;
   color: white;
   padding: 20px;
@@ -216,3 +216,4 @@ article img
   cursor: pointer;
   border-radius: 14px;
 }
+*/
