--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -143,7 +143,8 @@ section
 #top_page
 {
 	display : flex;
-	flex-wrap: wrap;	
+	flex-wrap: wrap;
+	border-style: none;	  /*Ajouter pour supprimer le cadre du btn supprimer*/
 }
 
 
@@ -202,7 +203,7 @@ article img
         display: none;
     }
 }
-/*
+
 .button {       /* ---------------test michael
   background-color: #0080ff;
   border: none;
