--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -194,7 +194,7 @@ article
 article img
 {    
     max-width: 25%;
-     min-width: 200px;
+    min-width: 200px;
     max-height: 25%;
     border-style: solid;
 	border-width: 1px;
@@ -207,15 +207,11 @@ article img
     {
         display: none;
     }
-
-    {
-        display: none;
-    }
 }
 
 @media (max-width: 410px) 
 {
-       #account_information
+     #account_information p
 	{	
 		 text-align: left;
 	}
