--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -215,6 +215,10 @@ article img
 	{	
 		 text-align: left;
 	}
+	label 
+	{	
+  	text-align: left;
+	}
 }
 
 .button {       /* ---------------test michael
