--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -152,6 +152,11 @@ section
 	 margin-left: auto;
  	 margin-right: auto; 
 }
+#bottom
+{	
+	 margin-left: auto;
+ 	 margin-right: auto; 
+}
 
 article, aside
 {
@@ -184,8 +189,7 @@ article
 }
 
 .TextWrap
-{
-	
+{	
 	float: left;
 	margin : 10px;
 }
@@ -211,10 +215,6 @@ article img
 
 @media (max-width: 410px) 
 {
-     #account_information p
-	{	
-		 text-align: left;
-	}
 	label 
 	{	
   	text-align: left;
