--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -138,6 +138,7 @@ section
 	border-radius: 5px;
   	box-shadow: 0px 2px 5px #1c1a19;
   	background-color: rgba(237, 242, 249,0.5);
+  	 padding: 5px 5px;	
 }
 
 #top_page
