--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -49,7 +49,7 @@ header
 	display: flex;
     align-items: center;
     flex-wrap: wrap;
-    background-color: rgba(0,0,100,1);
+    background-color: rgba(48, 83, 163,1);
 }
 
 #logo img /*Logo AWE*/
@@ -95,7 +95,7 @@ nav ul /*Gestion des déplacements des boutons*/
 aside
 {
     position: relative;
-    background-color: rgba(0,0,100,1);
+    background-color: rgba(48, 83, 163,1);
     box-shadow: 0px 2px 5px #1c1a19;
     border-radius: 5px;
     padding: 10px;
