--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -1,134 +1,113 @@
-/* HEADER */
 
-/*Tout est encadré pour l'instant pour mieux comprendre le flex*/
+/*Menu fixe*/
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+.sticky + .content {
+  padding-top: 102px;
+}
 
-body  /* Couleur de fond pour l'ensemble */
+/*Menu*/
+.header {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/*Menu bouton*/
+.header a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Qd on passe dessus (bouton menu)*/
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/*ArriÃ¨re page*/
+body  
 {
-/*	background-color: #c6eaae; Couleur Francois :D */
-	
 	background-color: rgba(237, 242, 249,0.5);
-}
-
-#bloc_page /*Marge pour l'ensemble de la page*/
-{
-    width: 95%;
-    margin: auto;
+	margin :0px;
 }
 
 
-
+/*Titre 2*/
 h2
 {
 	margin-left: 20px;
 }
 
-
-header
+/*Image du haut (logo)*/
+#logo 
 {
-	/*background-image: url("../images/top_commercial2.png");
-	background-repeat: no-repeat;
-	background-position: top left;*/
-	
-	
-	border-style: solid;
-  	border-width: 1px;
-  	border-radius: 5px;
+	height: 300px;
+	background-image: url("../images/Wallesmart2.png") ;
+  	background-position-x: center ;
+	background-position-y:inherit;
+ 	background-size: cover;
   	box-shadow: 0px 2px 5px #1c1a19;
-  	margin-bottom: 20px;
 }
 
-#logo /* Contient les items img, h1, et nav*/
+/*Compteur visite*/
+#visits span {
+  display: inline-block;
+  padding: 3px 6px 4px;
+  border-radius: 3px;
+  background-color: #323234;
+  margin-right: -3px;
+  color : white;
+  width:10px;
+  text-align : center;
+}
+
+
+h1 /*Style gÃ©nÃ©ral pour les titres h1*/
 {
-	border-style: solid;
-	border-width: 1px;
-	border-radius: 5px;
-	display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    background-color: rgba(48, 83, 163,1);
-}
-
-#logo img /*Logo AWE*/
-{
-	border-style: solid;
-	border-width: 1px;
-    width: 100px;
-    height: 100px;    
-}
-
-#logo h1 /*Modification du flex du titre*/
-{
-	flex : 3;	
-	color: white;
-}
-
-#logo nav
-{ 	
-	flex : 1;
-}
-
-header nav a  /*Couleur du texte de nav*/
-{  
-  	color : white;   
-}
-header nav li /*Défini les boutons*/
-{
-	width : 90px;
-	padding: 12px 0px;
-	text-align: center;
-	color : white;   
-	/*border-style: solid;
-	border-width: 1px;
-	border-radius: 5px;*/
-}
-nav ul /*Gestion des déplacements des boutons*/
-
-{
-    list-style-type: none;
-    padding: 5px 5px;	
-    display: flex;    
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-h1 /*Style général pour les titres h1*/
-{
-	font-size: 2.5em; 
+	font-size: 2.7em; 
     font-weight: normal;
    	text-align: center;
-   	flex: 3
 }
 
+/* Boite compteur */
+aside
+{
+    background-color: rgba(249, 240, 195);
+    box-shadow: 0px 2px 5px #1c1a19;
+    border-radius: 5px;
+    padding: 5px 5px;	
+    color: #444444d6;
+    font-size: 0.9em;
+    margin: 15px ;
+    border-color: black;
+    border-style: solid;
+	border-width: 1px;
+	min-height:140px;
+}
+
+/*Boite avec compteur*/
 aside h3
 {
 	text-align: center;
 }
 
-aside
+/*Bouton supprimer*/
+.buttonsupprimer
 {
-	flex: 1;
-    position: relative;
-    background-color: rgba(48, 83, 163,1);
+    
+    background-color: #bb1138; 
     box-shadow: 0px 2px 5px #1c1a19;
     border-radius: 5px;
     padding: 10px;
-    color: white;
-    font-size: 0.9em;
-    margin: 15px 0px;
-    border-color: black;
-    border-style: solid;
-	border-width: 1px;
-	min-width: 250px;
-}
-
-.supprimer
-{
-    float: right;
-    background-color: rgba(0,0,100,0.5);
-    box-shadow: 0px 2px 5px #1c1a19;
-    border-radius: 5px;
-    padding: 10px;
-    color: white;
+    color: black; /*police color*/
     font-size: 0.9em;
     margin: 15px 0px;
     border-color: black;
@@ -136,12 +115,30 @@ aside
 	border-width: 1px;
 }
 
+/*Bouton valider*/
+.buttonvalider
+{
+    background-color: #cff3b7; 
+    box-shadow: 0px 2px 5px #1c1a19;
+    border-radius: 5px;
+    padding: 10px;
+    color: black; /*police color*/
+    font-size: 0.9em;
+    margin: 15px 0px;
+    border-color: black;
+    border-style: solid;
+	border-width: 1px;
+}
+
+/*format label*/
 label {
   display: inline-block;
-  width: 200px;
+  max-width : 50%;
+  min-width : 25%;
   text-align: right;
 }
-  
+
+/*ArriÃ¨re plan du corps*/
 section
 { 
     margin-bottom: 20px;
@@ -151,15 +148,34 @@ section
 	clear : left;	
 	border-radius: 5px;
   	box-shadow: 0px 2px 5px #1c1a19;
-  	background-color: #c3e5f5;
-  	 padding: 5px 5px;	
+  	background-color: #eeffe9;
+  	padding: 5px 5px;	
+  	margin :15px;
 }
 
+/*box avec titre sur chaque page*/
 #top_page
 {
-	display : flex;
-	flex-wrap: wrap;
-	 /*border-style: none;	 Ajouter pour supprimer le cadre du btn supprimer*/
+	background-color : #b5f2f5;
+	border-style:none;
+	border-radius:0px;
+}
+
+/*format lien*/
+#lien{
+    text-align: justify;
+    background-color : #f5f2c5;
+    padding: 20px 20px;	
+    display: flex;    
+    flex-wrap: wrap;
+    justify-content: space-around;
+    display: inline-block;
+  	text-align: center;
+  	color : black;
+  	text-decoration:none;
+  	margin:10px;
+  	border-radius:5px;
+    width:auto;
 }
 
 #account_information
@@ -173,70 +189,30 @@ article, aside
     text-align: justify;
 }
 
-h3
-{
-
-}
 
 article
-{	 
-
-	overflow: hidden;	
-}
-
-#centerButton
-{
-text-align:center;
-margin:auto;
-}
-
-.connexion
-{
-	list-style-type: none;
-    padding: 5px 5px;	
-    display: flex;    
-    flex-wrap: wrap;
-    justify-content: space-around;
-    display: inline-block;
-  	width: 140px;
-  	text-align: left;
-}
-
-.TextWrap
 {	
-	float: left;
-	margin : 18px;
+	overflow: hidden;
+	padding:5px;
 }
 
+article p
+{	
+	margin-top:0px;
+}
 
 article img
 {    
+	float : left;
+	margin: 0px 15px 0px 0px;
     max-width: 25%;
-    min-width: 200px;
+    min-width: 20px;
     max-height: 25%;
     border-style: solid;
 	border-width: 1px;
 }
 
-
-@media (max-width: 660px) 
-{
-    header h1
-    {
-        display: none;
-    }
-}
-
-@media (max-width: 410px) 
-{
-	label 
-	{	
-  	text-align: left;
-	}
-}
-
-.button {       /* ---------------test michael
-  background-color: #0080ff;
+.button {       
   border: none;
   color: white;
   padding: 20px;
@@ -248,4 +224,232 @@ article img
   cursor: pointer;
   border-radius: 14px;
 }
-*/
+
+form {
+ padding:10px;
+ max-width:none;
+ }
+ 
+fieldset {
+ padding:0 20px 20px 20px;
+ margin-bottom:10px;
+ border:1px solid black;
+ border-radius:5px;
+ background : white;
+ max-size:none;
+ }
+ 
+legend {
+ color:black;
+ font-weight:bold
+ }
+ 
+label {
+ margin-top:10px;
+ text-align:left;
+ min-width:250px;
+ max-width:30px;
+ }
+ 
+label.inline {
+ display:inline;
+ }
+
+ 
+input, textarea, select {
+ background-color: white ;
+ padding:3px;
+ border:1px solid #f5e19b;
+ border-radius:5px;
+ width:200px;
+ box-shadow:1px 1px 2px #f5e19b inset;
+ }
+ 
+select {
+ margin-top:10px;
+ }
+ 
+input[type=radio] {
+ background-color:transparent;
+ border:none;
+ width:10px;
+ }
+ 
+ input[type=submit] , input[type=reset]{
+ width:48%;
+ margin-left:5px;
+ box-shadow:1px 1px 1px #cff3b7;
+ cursor:pointer;
+ float: right;
+  background-color:#cff3b7;
+ }
+ 
+ .modifier{
+ background-color:#cff3b7;
+ }
+
+input[type=submit]:active, input[type=reset]:active {
+ background-color:#cff3b7;
+ box-shadow:1px 1px 1px #cff3b7 inset;
+}
+
+#project{ 
+	background-color: blanchedalmond;
+    display: list-item;
+    color: black;
+    width: -webkit-fill-available;
+    height: auto;
+	}
+/*
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}*/
+
+/*Boutons du menu*/
+.header {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.header a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/*clic sur bouton*/
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+/*Bouton menu*/
+.header .icon {
+  display: none;
+}
+
+/*boite avec compteur*/
+.aside {
+  background-color: #33b5e5;
+  padding: 15px;
+  color: #ffffff;
+  text-align: center;
+  font-size: 14px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+
+
+
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+  float: left;
+}
+
+@media screen and (max-width: 600px) {
+	
+		body
+	{
+	 	background-color: white;
+	 }
+	 
+	 #logo
+	{
+		height: 150px;
+		background-image: url("../images/Wallesmart.png") ;
+	  	background-position-x: center ;
+		background-position-y:inherit;
+	 	background-size: cover;
+	  	box-shadow: 0px 2px 5px #1c1a19;
+	}
+	
+	h1
+	{
+		font-size: 1.2em;
+	}
+
+	#home
+	{
+		display:flex;
+	}
+	
+	
+	
+  .header a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .header a.icon {
+    float: right;
+    display: block;
+  }
+
+  .header.responsive {position: relative;}
+  .header.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .header.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header.responsive .dropdown {float: none;}
+  .header.responsive .dropdown-content {position: relative;}
+  .header.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+  
+}
+
+   
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+}
+
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%; }
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+
+
+
