--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -60,12 +60,11 @@ h2
 /*Compteur visite*/
 #visits span {
   display: inline-block;
-  padding: 3px 6px 4px;
+  padding: 5px;
   border-radius: 3px;
   background-color: #323234;
-  margin-right: -3px;
+  /*margin-right: -3px;*/
   color : white;
-  width:10px;
   text-align : center;
 }
 
@@ -73,7 +72,7 @@ h2
 h1 /*Style général pour les titres h1*/
 {
 	font-size: 2.7em; 
-    font-weight: normal;
+    	font-weight: normal;
    	text-align: center;
 }
 
@@ -89,8 +88,8 @@ aside
     margin: 15px ;
     border-color: black;
     border-style: solid;
-	border-width: 1px;
-	min-height:140px;
+    border-width: 1px;
+
 }
 
 h3
@@ -102,7 +101,10 @@ h3
 {
 	margin:auto;
 	text-align:-webkit-center;
+	text-align:center;
+	
 }
+
 /*Boite avec compteur*/
 aside h3
 {
