--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -67,6 +67,10 @@ h2
   text-align : center;
 }
 
+#visits {
+  margin-top:20px;
+}
+
 
 h1 /*Style général pour les titres h1*/
 {
@@ -351,15 +355,6 @@ input[type=submit]:active, input[type=reset]:active {
   display: none;
 }
 
-/*boite avec compteur*/
-.aside {
-  background-color: #33b5e5;
-  padding: 15px;
-  color: #ffffff;
-  text-align: center;
-  font-size: 14px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
 
 
 
