--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -158,7 +158,7 @@ label {
 /*Arrière plan du corps*/
 section
 { 
-   height:170px;	
+	
     margin-bottom: 20px;
     justify-content: space-between;
     border-style: solid;
@@ -318,12 +318,12 @@ input[type=submit]:active, input[type=reset]:active {
     width: -webkit-fill-available;
     height: auto;
 	}
-/*
+
 .row::after {
   content: "";
   clear: both;
   display: table;
-}*/
+}
 
 /*Boutons du menu*/
 .header {
@@ -446,7 +446,7 @@ input[type=submit]:active, input[type=reset]:active {
 
 @media only screen and (min-width: 768px) {
   /* For desktop: */
-	section {height:190px;}	
+	
   .col-1 {width: 8.33%;}
   .col-2 {width: 16.66%;}
   .col-3 {width: 25%;}
