--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -67,10 +67,7 @@ h2
   text-align : center;
 }
 
-aside{
-  margin-top:10px;
-  padding-bottom:25px;
-}
+
 
 
 h1 /*Style général pour les titres h1*/
@@ -81,8 +78,9 @@ h1 /*Style général pour les titres h1*/
 }
 
 /* Boite compteur */
-aside
-{
+aside{
+  margin-top:10px;
+  padding-bottom:25px;
     background-color: rgba(249, 240, 195);
     box-shadow: 0px 2px 5px #1c1a19;
     border-radius: 5px;
@@ -93,7 +91,7 @@ aside
     border-color: black;
     border-style: solid;
     border-width: 1px;
-
+   
 }
 
 h3
@@ -446,6 +444,14 @@ input[type=submit]:active, input[type=reset]:active {
 
 @media only screen and (min-width: 768px) {
   /* For desktop: */
+	
+aside{
+	height :25vh;	
+}
+
+#top_page{
+	height :26vh;	
+}
 	
   .col-1 {width: 8.33%;}
   .col-2 {width: 16.66%;}
