--- a/WebPortal/assets/css/style.css
+++ b/WebPortal/assets/css/style.css
@@ -74,6 +74,7 @@ h1 /*Style général pour les titres h1*/
 {
     	font-weight: normal;
    	text-align: center;
+	font-size :2.2em;
 }
 
 /* Boite compteur */
